# pytvdb

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  run
.run/: pre_commit.sh  util.sh
.run/commands/: poetrybuild.sh  poetrypublish.sh  precommit.sh  pytest.sh  virtualenv.sh
.run/tasks/: checks.sh  install.sh  release.sh
src/pytvdb/: __init__.py  my_tvdb.py
src/pytvdb/data/: settings.toml
tests/: test_tvdb.py
